--- a/package.json
+++ b/package.json
@@ -13,7 +13,35 @@
     "express": "^4.17.2"
   },
   "devDependencies": {
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.4.7",
+    "prettier": "^2.5.1",
     "supertest": "^6.2.1"
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "ecmaVersion": 6
+    },
+    "extends": [
+      "eslint:recommended",
+      "plugin:prettier/recommended"
+    ], 
+    "plugins": [
+      "prettier"
+    ],
+    "env": {
+      "node": true,
+      "es6": true,
+      "jest": true
+    },
+    "rules": {}
+  },
+  
+  "prettier":{
+    "singleQuote": true
+    
   }
+
 }
